FIX: layout issue in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,20 @@
 }
 html {
 	height: 100%;
+	max-width: 100%;
+	overflow: hidden;
 }
 
 body {
-  height: 100%;
+	height: 100%;
+	max-width: 100%;
   min-height: 35rem;
   position: relative;
   font-family: 'lora';
-  font-weight: 400;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+	background:grey;
 }
 
 h1,
@@ -39,18 +45,20 @@ video {
 .social-icons {
   position: absolute;
   margin-bottom: 2rem;
-  width: 100%;
+  min-width: 100%;
 	z-index: 2;
 }
 .social-icons ul {
     margin-top: 2rem;
     width: 100%;
-    text-align: center;
+		text-align: center;
+		border: 1px solid pink;
 		}
 .social-icons ul li {
       margin-left: 1rem;
       margin-right: 1rem;
-      display: inline-block;
+			display: inline-block;
+			border: 1px solid pink;
  }
 .social-icons ul li:last-child {
 	margin-bottom: 0;
@@ -84,10 +92,12 @@ video {
 .overlay {
   position: absolute;
   top: 0;
-  left: 0;
+	left: 0;
   height: 100%;
-  width: 100%;
+  min-width: 100%;
   background-color:  var(--primary);
   opacity: 0.7;
 	z-index: 1;
+	margin: 0;
+	padding: 0;
 }
